--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -4,6 +4,12 @@ permalink: /music_folder/LC202205
 title: London Calling May 2022
 ---
 
+# The Watchlist
+
+| Day | Who | Priority |
+|--------|--------|--------|
+| Friday|Lime Garden|Check out|
+
 # The Playlist
 
 <p align="center"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2P8D0ZEyOSA4roNsSUUDVP?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></p>
@@ -139,7 +145,7 @@ This is Every Bottle is My Boyfriend
 ## TOPS
 *Downstairs*\
 *Still to be listened to*\
-These guys are from Montreal and have been around since 2011. They've been described as doing fuzzy, honey dipped somngs reminiscent of Fkeetwood Mac. Apparently their music includes obvious 80's punk and 90's indie influences.
+These guys are from Montreal and have been around since 2011. They've been described as doing fuzzy, honey dipped songs reminiscent of Fleetwood Mac. Apparently their music includes obvious 80's punk and 90's indie influences.
 
 This is them live last year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/WaIpXOYFpgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -172,7 +178,6 @@ These guys are effectively headlining Saturday and they're one band I've actuall
 
 This is them live on Jools Holland 
 <iframe width="645" height="363" src="https://www.youtube.com/embed/RShSCNUzFcc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 
 ## Pist Idiots
 *Upstairs*\
