--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -8,7 +8,19 @@ title: London Calling May 2022
 
 | Day | Who | Priority |
 |--------|--------|--------|
+| Friday|The Heavy Heavy| |
+| Friday|Ian Sweet|Missable|
 | Friday|Lime Garden|Check out|
+| Friday|Water From Your Eyes| |
+| Friday|Kills Birds|Check out|
+| Friday|Michelle|Check out|
+| Friday|illuminati hotties|Check out|
+| Friday|Ducks Ltd|Check out|
+| Friday|The Clockworks|Unmissable|
+| Friday|Courting|Check out|
+| Friday|Surfbort|Unsure|
+
+
 
 # The Playlist
 
@@ -40,8 +52,7 @@ This is them live in 2021
 
 ## Water From Your Eyes
 *Upstairs*\
-* Still to be listened to\
-From Brooklyn, they've been on the go as a duo since 2016. Apparently they started out sounding like a New Orders rip off band, they're usually described as doing experimental electro pop. 
+From Brooklyn, they've been on the go as a duo since 2016. Apparently they started out sounding like a New Orders rip off band, they're usually described as doing experimental electro pop. Not sure about them to be honest
 
 This is them live from earlier this year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/9aNv4pgl1ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -144,8 +155,7 @@ This is Every Bottle is My Boyfriend
 
 ## TOPS
 *Downstairs*\
-*Still to be listened to*\
-These guys are from Montreal and have been around since 2011. They've been described as doing fuzzy, honey dipped songs reminiscent of Fleetwood Mac. Apparently their music includes obvious 80's punk and 90's indie influences.
+These guys are from Montreal and have been around since 2011. They've been described as doing fuzzy, honey dipped songs reminiscent of Fleetwood Mac. Apparently their music includes obvious 80's punk and 90's indie influences. They're light, chilled and a bit funky as they're on downstairs we might as well give them a go. 
 
 This is them live last year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/WaIpXOYFpgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
