--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -6,19 +6,21 @@ title: London Calling May 2022
 
 # The Watchlist
 
-| Day | Who | Priority |
-|--------|--------|--------|
-| Friday|The Heavy Heavy| |
-| Friday|Ian Sweet|Missable|
-| Friday|Lime Garden|Check out|
-| Friday|Water From Your Eyes| |
-| Friday|Kills Birds|Check out|
-| Friday|Michelle|Check out|
-| Friday|illuminati hotties|Check out|
-| Friday|Ducks Ltd|Check out|
-| Friday|The Clockworks|Unmissable|
-| Friday|Courting|Check out|
-| Friday|Surfbort|Unsure|
+| Day |Where| Who | Priority |
+|--------|--------|--------|--------|
+| Friday|Down|The Heavy Heavy| |
+| Friday|Up|Ian Sweet|Missable|
+| Friday|Down|Lime Garden|Check out|
+| Friday|Up|Water From Your Eyes|Missable |
+| Friday|Down|Kills Birds|Check out|
+| Friday|Up|Michelle|Check out|
+| Friday|Down|illuminati hotties|Check out|
+| Friday|Up|Ducks Ltd|Check out|
+| Friday|Down|The Clockworks|Unmissable|
+| Friday|Up|Courting|Check out|
+| Friday|Down|Surfbort|Mebbes aye, mebbes naw|
+| | | |
+| Saturday|Up|Aaron Smith|Missable|
 
 
 
@@ -52,7 +54,7 @@ This is them live in 2021
 
 ## Water From Your Eyes
 *Upstairs*\
-From Brooklyn, they've been on the go as a duo since 2016. Apparently they started out sounding like a New Orders rip off band, they're usually described as doing experimental electro pop. Not sure about them to be honest
+From Brooklyn, they've been on the go as a duo since 2016. Apparently they started out sounding like a New Orders rip off band, they're usually described as doing experimental electro pop. Not sure about them to be honest, not sure they'll be worth the effort, a bit too experimental. 
 
 This is them live from earlier this year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/9aNv4pgl1ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
