--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -8,7 +8,7 @@ title: London Calling May 2022
 
 | Day |Where| Who | Priority |
 |--------|--------|--------|--------|
-| Friday|Down|The Heavy Heavy| |
+| Friday|Down|The Heavy Heavy|Whatever |
 | Friday|Up|Ian Sweet|Missable|
 | Friday|Down|Lime Garden|Check out|
 | Friday|Up|Water From Your Eyes|Missable |
@@ -21,6 +21,20 @@ title: London Calling May 2022
 | Friday|Down|Surfbort|Mebbes aye, mebbes naw|
 | | | |
 | Saturday|Up|Aaron Smith|Missable|
+| Saturday|Up|Automotion|Check out|
+| Saturday|Down|Ethan P Flynn|Check out|
+| Saturday|Up|Lunar Vacation|Check out|
+| Saturday|Down|Penelope Isles|Missable|
+| Saturday|Up|CMAT|Whatever|
+| Saturday|Down|TOPS|Whatever|
+| Saturday|Up|Silverbacks|Check out|
+| Saturday|Down|Dora Jar|Missable|
+| Saturday|Up|Modern Nature|Missable|
+| Saturday|Down|Wet Leg|Unmissable|
+| Saturday|Up|Pist Idiots|Check out|
+| Saturday|Down|Cash Savage and the Last Drinks|Check out|
+| Saturday|Up|Nixer|Check out|
+
 
 
 
@@ -32,8 +46,7 @@ title: London Calling May 2022
 
 ## The Heavy Heavy
 *Downstairs*\
-*Still to be listened to*\
-Originally from Brighton although some reviewers seem to think they're now based in London. They're described as being influenced by 60's American folk rock, bands such as Crosby, Stills and Nash, Bob Dylan and even some early Stones
+Originally from Brighton although some reviewers seem to think they're now based in London. They're described as being influenced by 60's American folk rock, bands such as Crosby, Stills and Nash, Bob Dylan and even some early Stones. It's a fair description to be honest, they're not doing anything new but they're OK if you like that kind of music. It's a shame they're on so early as it'll be difficult to get motivated to go in especially to see them. 
 
 This is them live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/JZzEOCeIUfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -185,7 +198,6 @@ There's not much on Youtube for them, so this is a video that's also on the LC s
 
 ## Wet Leg
 *Downstairs*\
-*Still to be listened to*\
 These guys are effectively headlining Saturday and they're one band I've actually heard of before they were put on the running order for LC. Currently the darlings of 6 Music and the indie music press in the UK, they're fronted by two women who've been friends since music college. They're indie rock and they're going places - they've already sold out a tour to the US and we'd be crazy to miss them. 
 
 This is them live on Jools Holland 
