--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -8,7 +8,7 @@ title: London Calling May 2022
 
 | Day |Where| Who | Priority |
 |--------|--------|--------|--------|
-| Friday|Down|The Heavy Heavy|Whatever |
+| Friday|Down|The Heavy Heavy|Check out |
 | Friday|Up|Ian Sweet|Missable|
 | Friday|Down|Lime Garden|Check out|
 | Friday|Up|Water From Your Eyes|Missable |
