--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -35,7 +35,7 @@ title: London Calling May 2022
 | Saturday|Down|Cash Savage and the Last Drinks|Check out|
 | Saturday|Up|Nixer|Check out|
 
-
+[The blokkenschema](https://www.londoncalling.nl/en/blokkenschema/){:target="\_blank"}
 
 
 # The Playlist
