--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -14,10 +14,9 @@ title: London Calling May 2022
 | Friday|Up|Water From Your Eyes|Missable |
 | Friday|Down|Kills Birds|Check out|
 | Friday|Up|Michelle|Check out|
-| Friday|Down|illuminati hotties|Check out|
-| Friday|Up|Ducks Ltd|Check out|
 | Friday|Down|The Clockworks|Unmissable|
-| Friday|Up|Courting|Check out|
+| Friday|Up|Ducks Ltd|Check out|
+| Friday|Down|Courting|Check out|
 | Friday|Down|Surfbort|Mebbes aye, mebbes naw|
 | | | |
 | Saturday|Up|Aaron Smith|Missable|
@@ -29,7 +28,7 @@ title: London Calling May 2022
 | Saturday|Down|TOPS|Whatever|
 | Saturday|Up|Silverbacks|Check out|
 | Saturday|Down|Dora Jar|Missable|
-| Saturday|Up|Modern Nature|Missable|
+| Saturday|Up|illuminati hotties|Check out|
 | Saturday|Down|Wet Leg|Unmissable|
 | Saturday|Up|Pist Idiots|Check out|
 | Saturday|Down|Cash Savage and the Last Drinks|Check out|
