--- a/_pages/diving_folder/truk2024.md
+++ b/_pages/diving_folder/truk2024.md
@@ -6,9 +6,7 @@ title: Truk 2024
 
 ### Stuff to go here
 
-- Travel agent
-	- quote details
-	- itinerary details
+[Travel Agent Stuff](https://stuartmonro.github.io/diving_folder/travelagent 'Tour Details')
 - Accommodation
 - The Diving
 - Apres Dive
