--- a/_pages/diving_folder/truk2024.md
+++ b/_pages/diving_folder/truk2024.md
@@ -7,6 +7,7 @@ title: Truk 2024
 ### Stuff to go here
 
 [Travel Agent Stuff](https://stuartmonro.github.io/diving_folder/travelagent 'Tour Details')
+[Videos](https://stuartmonro.github.io/diving_folder/videos 'Vids')
 - Accommodation
 - The Diving
 - Apres Dive
